<resources>
    <string name="app_name">LoginLogout</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_age">Age</string>
    <string name="create_account">Create an Account</string>
    <string name="txt_btn_login">Already Have an Account?\nLogin!!</string>
    <string name="btn_link_signup">Not Registered ? Register Now !</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="add">Add New</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="spinner_month">- Select a Month -</string>
    <string name="spinner_year">- Select a Year -</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string-array name="month_array_full">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
    </string-array>

    <string-array name="year_array">
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
    </string-array>

    <string-array name="cuti">
        <item>Cuti Tahunan</item>
        <item>Cuti Melahirkan</item>
        <item>Cuti Bersama</item>
        <item>Cuti Hamil</item>
        <item>Cuti Sakit</item>
        <item>Cuti Haid</item>
        <item>Cuti Penting</item>
        <item>Cuti Besar</item>
        <item>Lain-lainnya</item>
    </string-array>

    <string-array name="overtime">
        <item>Hari libur/tanggal merah</item>
        <item>per Jam</item>
        <item>1 shift/1 hari kerja</item>
    </string-array>
    <string-array name="ijin">
        <item>Datang Terlambat</item>
        <item>Urusan Keluarga</item>
        <item>Pulang Lebih Awal</item>
        <item>Tidak Masuk</item>
        <item>Sakit</item>
        <item>Lain-lainnya</item>
    </string-array>

</resources>
